Add current players counter, so new users will know when they can join the game

--- a/static/index.html
+++ b/static/index.html
@@ -22,6 +22,7 @@
 
   <div id="loginCover">
     <p id="title">Casserole</p>
+    <p id="onlineCounter"></p>
     <div id="loginDiv">
       <form action="" autocomplete="off" >
         <label><input type="text" id="nick" placeholder="Your nick" maxlength="20"/></label><br />
